--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -10,6 +10,15 @@ body {
     height: 100vh; /* Full viewport height */
     overflow: hidden; /* Prevent body scrolling */
 }
+#footer {
+    background-color: #181818;
+    box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5); /* Shadow for left panel */
+    color: white;
+}
+
+.insta-link{
+    color: white;
+}
 
 /* Main container */
 .main-container {
@@ -37,16 +46,18 @@ body {
     overflow: hidden; /* Prevent scrolling on the side panels */
 }
 
+/* Center panel styling */
 #center-panel {
     padding: 20px;
     width: 50%;
     background-color: #121212;
     display: flex;
     flex-direction: column;
-    flex: 1; /* Allow center panel to grow and fill available space */
+    height: calc(100vh - 60px); /* Full height minus footer height */
     overflow: hidden; /* Prevent scrolling on the center panel */
+    align-items: center; /* Center items horizontally */
+    justify-content: flex-start; /* Align items to the top */
 }
-
 /* Section styles within panels */
 #current-playing-info, #users-queue, #track-info {
     margin-bottom: 20px;
@@ -134,16 +145,6 @@ body {
     color: #888; /* Lighter color for empty messages */
 }
 
-/* Search bar styling */
-#search-bar {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #333; /* Darker border */
-    border-radius: 5px; /* Slightly rounded corners */
-    background-color: #1e1e1e; /* Match background color */
-    color: #e0e0e0; /* Match text color */
-}
-
 /* Suggestions list styling */
 #suggestions {
     margin-top: 10px;
@@ -169,4 +170,33 @@ body {
 
 #queue-list::-webkit-scrollbar-thumb:hover {
     background: #1aab46; /* Slightly darker color on hover */
+}
+
+/* Search container styling */
+#search-container {
+    width: 50%; /* Set container width to 50% of the center panel */
+    margin-top: 10%; /* Position 10% from the top of the center panel */
+    display: flex;
+    justify-content: center; /* Center the search bar horizontally */
+}
+
+/* Search bar styling */
+#search-bar {
+    width: 100%; /* Full width of the search container */
+    max-width: 600px; /* Max width for wider appearance */
+    padding: 12px 20px; /* Padding inside the search bar */
+    border: 1px solid #333; /* Darker border for a sleek look */
+    border-radius: 25px; /* Rounded corners for smooth appearance */
+    background-color: #1e1e1e; /* Dark background for the search bar */
+    color: #e0e0e0; /* Light gray text color */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); /* Subtle shadow for emphasis */
+    font-size: 16px; /* Font size for readability */
+    outline: none; /* Remove default outline */
+    box-sizing: border-box; /* Include padding in width calculation */
+}
+
+/* Placeholder text styling */
+#search-bar::placeholder {
+    color: #b3b3b3; /* Light gray placeholder text */
+    opacity: 1; /* Ensure placeholder text is visible */
 }
