--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,13 @@
             </div>
         </div>
         <div id="center-panel">
-            <div class="search-section">
+            <div class="search-container">
                 <input type="text" id="search-bar" placeholder="Search for a track...">
-                <div id="suggestions"></div>
+                <div class="results">
+                    <ul>
+
+                    </ul>
+                </div>
             </div>
         </div>
         <div id="right-panel">
@@ -40,7 +44,7 @@
         </div>
     </div>
     <footer id="footer">
-        Version: 0.01 | Stijn van Hees
+        Version: 0.01 | <a class="insta-link" href="https://www.instagram.com/stijn_van_hees/" target="_blank">Stijn van Hees</a>
     </footer>
 
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
