--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
         </div>
         <div id="center-panel">
             <div class="search-container">
-                <input type="text" id="search-bar" placeholder="Search for a track...">
+                <input type="text" id="search-bar" placeholder="Search for a track..." autocomplete="chrome-off">
                 <div class="results">
-                    <ul>
-
+                    <ul id="results-list">
+                        <!-- Dynamic search results will appear here -->
                     </ul>
                 </div>
             </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
     <footer id="footer">
-        Version: 0.01 | <a class="insta-link" href="https://www.instagram.com/stijn_van_hees/" target="_blank">Stijn van Hees</a>
+        Version: 0.02 | <a class="insta-link" href="https://www.instagram.com/stijn_van_hees/" target="_blank">Stijn van Hees</a>
     </footer>
 
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
