--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -340,3 +340,46 @@ body {
         font-size: 16px; /* Smaller font size for artist name */
     }
 }
+
+
+/* Add to Queue button styling */
+#add-to-queue-button {
+    padding: 10px 20px;
+    background-color: #1db954; /* Spotify green */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px;
+    display: none; /* Initially hidden */
+    transition: background-color 0.3s;
+}
+
+#add-to-queue-button:hover {
+    background-color: #1aab46; /* Slightly darker green on hover */
+}
+
+#add-to-queue-button:active {
+    background-color: #106a2b; /* Even darker green when button is pressed */
+    transform: scale(0.98); /* Slight scale effect on click */
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px; /* Adjust as needed */
+    right: 10px; /* Adjust as needed */
+    background: #f00; /* Red background */
+    color: #fff; /* White text */
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    display: none; /* Initially hidden */
+}
+
+.close-btn:hover {
+    background: #c00; /* Darker red on hover */
+}
