--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
 <body>
+        <!-- Custom Alert -->
+    <div id="custom-alert" class="custom-alert hidden">
+        <span id="alert-message"></span>
+        <button id="alert-close" class="alert-close">X</button>
+    </div>
+    
     <div class="container">
         <div id="left-panel">
             <div id="current-playing-info">
@@ -49,7 +55,7 @@
         </div>
     </div>
     <footer id="footer">
-        Version: 1.0 | <a class="insta-link" href="https://www.instagram.com/stijn_van_hees/" target="_blank">Stijn van Hees</a>
+        Version: 1.01 | <a class="insta-link" href="https://www.instagram.com/stijn_van_hees/" target="_blank">Stijn van Hees</a>
     </footer>
 
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
