--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Integration</title>
+    <title>QUE</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <span id="alert-message"></span>
         <button id="alert-close" class="alert-close">X</button>
     </div>
-    
+
     <div class="container">
         <div id="left-panel">
             <div id="current-playing-info">
