--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUE</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/logo/icon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
 <body>
@@ -59,5 +60,6 @@
     </footer>
 
     <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
 </body>
 </html>
