--- a/templates/setup.html
+++ b/templates/setup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Connection</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/logo/icon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/setup.css') }}">
 </head>
 <body>
