improve the visualisation

--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -11,8 +11,7 @@
 
         <link rel="apple-touch-icon" href="logo.png">
 
-        <title>WebGL Fluid Simulation</title>
-        <meta name="description" content="A WebGL fluid simulation that works in mobile browsers.">
+        <title>Spotify fluid vizualiser</title>
 
         <script src="{{ url_for('static', filename='scripts/dat.gui.min.js') }}"></script>
         <style>
